--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 html, body {
     padding: 100;
-    background-color: white
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
     }
 
 #draw{
@@ -10,12 +11,10 @@ html, body {
 h1{
   font-family: "Lobster", cursive;
   font-size:3em;
-  color:rgb(95, 11, 121)
+  color:purple
 }
-  
-h5{
-  font-family: "Lobster", cursive;
-  color:rgb(95, 11, 121)
+h2{
+  color:purple
 }
 
 .brush:hover{
@@ -26,10 +25,41 @@ h5{
   font-size: 10px;
 }
 
-.img {
+.stampimage {
   transition: transform .2s; 
 }
 
-img:hover{
+.stampimage:hover{
   transform: scale(1.3);
 }
+
+.navbar-toggler-icon {
+  display: block;
+  float : right;
+}
+
+.navbar-collapse{
+  justify-content: flex-end;
+ }
+
+.dottedline {
+  padding: 2rem 0rem 2rem 0rem;
+  border-bottom: 0.2rem dotted;
+  color:grey
+}
+
+.appbutton:hover{
+  text-decoration: none;
+}
+
+.jumbotron{
+  background-image: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
+  padding-bottom: 15px;
+}
+
+.fitimage{
+  object-fit: cover;
+  background-color: black;
+  width:500px;
+  height:300px
+} 
