--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,25 @@ html, body {
     }
 
 #draw{
-  background-color: black;
+  background-color: white;
+  outline: purple 10px solid;
 }
 
 h1{
   font-family: "Lobster", cursive;
-  font-size:3em;
+  font-size:4em;
   color:purple
 }
 h2{
-  color:purple
+  color:purple;
+  font-size:2.5em;
+  font-weight: bold;
 }
+
+h3{
+  font-size:2em
+}
+
 
 .brush:hover{
   color:grey
@@ -42,24 +50,50 @@ h2{
   justify-content: flex-end;
  }
 
-.dottedline {
-  padding: 2rem 0rem 2rem 0rem;
-  border-bottom: 0.2rem dotted;
-  color:grey
+.appbutton{
+  width:250px;
+  height:70px;
+  border-radius: 5%;
+  background-color: black;
 }
-
 .appbutton:hover{
   text-decoration: none;
+  background-color: grey;
 }
 
 .jumbotron{
   background-image: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
-  padding-bottom: 15px;
+  padding-bottom: 1px;
 }
 
 .fitimage{
   object-fit: cover;
   background-color: black;
-  width:500px;
-  height:300px
+  width:35em;
+  height:20em;
+
 } 
+
+#examples{
+  background-color: #ebf8e1;
+}
+
+.extraIcon{ 
+  font-size:60px; 
+}
+
+.extraIcon:hover {
+  color:gray;
+  transform: scale(1.1)
+}
+
+.extraBtn{ 
+  font-size:1.5vw; 
+  font-weight:800;
+}
+
+footer{
+  background-image: linear-gradient(0.25turn, #f69d3c, #ebf8e1, #3f87a6);
+  padding-top:30px;
+  padding-bottom: 30px;
+}
